setting up the mayors great adventure

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <!-- Add your site or application content here -->
         <section class="wrapper">
 
+            <section class="frontPage">
+
+            </section>
+
             <section class="sky"></section>
 
             <section class="ocean">
